--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,2 @@
-inherit_from:
-  - https://raw.githubusercontent.com/panorama-ed/code-conventions/master/rubocop.yml
-
-AllCops:
-  TargetRubyVersion: 2.4 # Keep this in sync with .travis.yml
+inherit_gem:
+  panolint: rubocop.yml
