--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,9 +16,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
+#    - uses: ruby/setup-ruby@v1
+#      with:
+#        ruby-version: ${{ matrix.ruby }}
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
