--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,4 @@ sonar.organization=anthonytestorg
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
-sonar.sources=lib
+sonar.sources=app,config,db,lib
