--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       CI: true
+      CODE_COVERAGE: true
     steps:
     - uses: actions/checkout@v2
       with:
