--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,4 @@ sonar.organization=anthonytestorg
 #sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
 sonar.sources=lib
+sonar.ruby.coverage.reportPaths=coverage/.resultset.json
