--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 # based on https://github.com/ruby/setup-ruby/blob/master/README.md
 name: Tests
-on: [push, pull_request]
+on: [pull_request]
 jobs:
   ci:
     name: CI
